fix dish page on mobile size

--- a/src/pages/Dish/Dish.module.scss
+++ b/src/pages/Dish/Dish.module.scss
@@ -8,35 +8,54 @@
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: bold;
-  padding: 3rem 0 0 4rem ;
+  padding: 3rem 0 0 4rem;
 }
+
 .container {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
+
 .titulo {
   font-size: 3rem;
 }
+
 .imagem {
   width: 600px;
+
   img {
     border-radius: 8px;
     width: 100%;
   }
 }
+
 .conteudo {
   align-items: center;
   display: flex;
   flex-direction: column;
+
   &__descricao {
     color: $darkest-grey;
     font-size: 1.5rem;
     font-weight: bold;
   }
+
   &____detalhes {
     display: flex;
     justify-content: space-between;
   }
+}
+
+@media (max-width: $desktop_xsm) {
+
+  .outsideContainer {
+    padding: 20px;
+  }
+
+  .imagem {
+    width: 90%;
+  }
+
 }
